# nixpython

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
nixpython/: __init__.py  dummy.py
scripts/: test_package.py
